<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b2"
        android:layout_marginStart="40dp"
        android:layout_marginTop="165dp"
        android:text="@string/ayush_jain"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/t5"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/the_quick_brown_fox_jumps_over_the_lazy_dog"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:layout_below="@+id/t2"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:layout_below="@+id/t4"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/book_cipher"
        android:textAlignment="center"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:layout_below="@+id/t3"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et1"
        android:layout_marginStart="130dp"
        android:layout_marginTop="0dp"
        android:onClick="Encode"
        android:text="@string/encode" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et2"
        android:layout_marginStart="130dp"
        android:layout_marginTop="0dp"
        android:onClick="Decode"
        android:text="@string/decode" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/t1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/text_to_encode"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b2"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/output"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_to_decode"
        android:textSize="25sp" />

    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et3"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:onClick="Clear"
        android:text="@string/clear" />

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et3"
        android:layout_marginStart="195dp"
        android:onClick="Copy"
        android:text="@string/copy" />


</RelativeLayout>